--- a/index.html
+++ b/index.html
@@ -28,12 +28,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Laura - v3.0.0
-  * Template URL: https://bootstrapmade.com/laura-free-creative-bootstrap-theme/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body>
@@ -109,9 +104,9 @@
               </div>
             </div><!-- End .content-->
 
-            <div class="skills-content pl-lg-4">
+            <div class="skills-content pl-lg-8">
               <div class="progress">
-                <span class="skill">Java <i class="val">100%</i></span>
+                <span class="skill">Java <i class="val">95%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
                     aria-valuemax="100"></div>
@@ -119,7 +114,7 @@
               </div>
 
               <div class="progress">
-                <span class="skill">HTML <i class="val">90%</i></span>
+                <span class="skill">HTML/CSS <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                   </div>
@@ -127,7 +122,23 @@
               </div>
 
               <div class="progress">
-                <span class="skill">JavaScript <i class="val">75%</i></span>
+                <span class="skill">Webservies <i class="val">80%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                  </div>
+                </div>
+              </div>
+
+              <div class="progress">
+                <span class="skill">NodeJs <i class="val">70%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                  </div>
+                </div>
+              </div>
+
+              <div class="progress">
+                <span class="skill">Sql/No-Sql Databases<i class="val">85%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
                   </div>
@@ -287,7 +298,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-img">
-              <a href="assets/img/portfolio/portfolio-4.jpg">
+              <a href="https://github.com/shipragupta03/memoriesTies">
                 <img src="assets/img/portfolio/memoriesTies.PNG" class="img-fluid" alt="">
               </a>
             </div>
@@ -301,8 +312,8 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img">
-              <a href="assets/img/portfolio/portfolio-5.jpg"><img src="assets/img/portfolio/BookStore.png"
-                  class="img-fluid" alt=""></a>
+              <a href="https://github.com/shipragupta03/bookstore">
+                <img src="assets/img/portfolio/BookStore.png" class="img-fluid" alt=""></a>
             </div>
             <!-- <div class="portfolio-info">
               <h4>Book Store</h4>
